[tool.poetry]
name = "bipolev"
version = "1.0.1"
description = "#26 in the Bipole Series"
authors = ["InfinityJKA <jkajustin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pillow = "^9.3.0"


[tool.poetry.group.dev.dependencies]
black = { version = "22.12.0", extras = [
      "d",
    ] }
isort = "^5.11.2"
poetry = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
preview = false


[tool.isort]
atomic = true
line_length = 88
profile = "black"
skip_gitignore = true
