[tool.poetry]
authors = ["InfinityJKA <jkajustin@gmail.com>"]
description = "#26 in the Bipole Series"
name = "bipole5"
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
numpy = "^1.23.5"
pillow = "^9.3.0"
python = ">=3.8,<3.12"


[tool.poetry.group.dev.dependencies]
black = { version = "22.12.0", extras = ["d"] }
isort = "^5.11.2"
poetry = "^1.3.1"
pyinstaller = "^5.7.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]


[tool.black]
line-length = 88
preview = false


[tool.isort]
atomic = true
line_length = 88
profile = "black"
skip_gitignore = true
